--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,149 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  background-color: white;
+  font-family: 'Roboto', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.title {
+  text-align: center;
+  color: green;
+  font-size: xx-large;
+  font-weight: 900;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.subtitle {
+  font-size: x-large;
+  color: green;
+  font-weight: 900;
+  font-style: italic;
+  text-decoration: underline;
+}
+
+.titleNavigation {
+  font-size: xx-large;
+  color: green;
+  font-weight: 900;
+  font-style: oblique;
+}
+
+.navTitle {
+  font-size: x-large;
+  color: green;
+  font-weight: 700;
+  font-style: oblique;
+}
+
+.nav {
+  border: 4px solid green;
+  border-radius: 20px;
+  min-width: fit-content;
+  height: fit-content;
+}
+
+.navList {
+  list-style-type: none;
+  padding: 0px 0px;
+}
+
+.navList a {
+  text-decoration: none;
+  color: black;
+}
+
+.page {
+  display: flex;
+  flex-direction: row;
+  min-height: 100%;
+  position: relative;
+  padding-bottom: 20px;
+}
+
+.section {
+  border: 4px solid green;
+  border-radius: 20px;
+  margin-left: 20px;
+}
+
+.footer {
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: green;
+  text-align: center;
+  padding: 10px 0px;
+}
+
+.footer a {
+  text-decoration: none;
+  color: black;
+  background-color: white;
+  font-size: larger;
+  padding: 5px 10px;
+  border-radius: 20px;
+
+}
+
+.article {
+  margin: 0px 10px;
+}
+
+a:hover {
+  cursor: pointer;
+  color: green;
+}
+
+li {
+  margin: 10px 5px;
+}
+
+
+h2 {
+  font-size: x-large;
+  margin: 10px 5px;
+  font-weight: 700;
+}
+
+h3 {
+  margin: 10px 10px;
+}
+
+p {
+  font-size: larger;
+  margin: 5px 5px;
+  font-weight: 400;
+}
+
+li {
+  font-size: large;
+  margin-left: 5px;
+  font-weight: 100;
+}
+
+img {
+  width: 100%;
+  max-width: 700px;
+  height: auto;
+}
+
+.img-article {
+  display: flex;
+  justify-content: center;
+}
+
+@media (max-width: 1080px) {
+  .page {
+    display: flex;
+    flex-direction: column;
+    min-height: 100%;
+    position: relative;
+    padding-bottom: 20px;
+  }
+
+  .section {
+    margin-top: 10px;
+    border-radius: 20px;
+    margin-left: 0px;
+  }
 }
