--- a/src/index.css
+++ b/src/index.css
@@ -6,36 +6,28 @@
 .title {
   text-align: center;
   color: green;
-  font-size: xx-large;
+  font-size: large;
   font-weight: 900;
   font-style: italic;
   text-decoration: underline;
 }
 
 .subtitle {
-  font-size: x-large;
+  font-size: large;
   color: green;
-  font-weight: 900;
+  font-weight: 500;
   font-style: italic;
-  text-decoration: underline;
-}
-
-.titleNavigation {
-  font-size: xx-large;
-  color: green;
-  font-weight: 900;
-  font-style: oblique;
 }
 
 .navTitle {
-  font-size: x-large;
+  font-size: large;
   color: green;
   font-weight: 700;
   font-style: oblique;
 }
 
 .nav {
-  border: 4px solid green;
+  border: 2px solid green;
   border-radius: 20px;
   min-width: fit-content;
   height: fit-content;
@@ -60,20 +52,10 @@
 }
 
 .section {
-  border: 4px solid green;
+  border: 2px solid green;
   border-radius: 20px;
   margin-left: 20px;
 } 
-
-.footer {
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color: green;
-  text-align: center;
-  padding: 10px 0px;
-}
 
 .footer a {
   text-decoration: none;
@@ -88,16 +70,6 @@
 .article {
   margin: 0px 10px;
 }
-
-a:hover {
-  cursor: pointer;
-  color: green;
-}
-
-li {
-  margin: 10px 5px;
-}
-
 
 h2 {
   font-size: x-large;
@@ -115,10 +87,10 @@ p {
   font-weight: 400;
 }
 
-li {
+article li {
   font-size: large;
-  margin-left: 5px;
   font-weight: 100;
+  margin: 10px 0px;
 }
 
 img {
@@ -146,4 +118,16 @@ img {
     border-radius: 20px;
     margin-left: 0px;
   }
+}
+
+button {
+  border: green solid 2px;
+  border-radius: 10px;
+  margin: 3px 3px;
+}
+
+button:hover {
+  cursor: pointer;
+  background-color: green;
+  color: white;
 }
