--- a/src/index.css
+++ b/src/index.css
@@ -171,7 +171,7 @@ ol button:hover {
   bottom: -5px;
   height: 50px;
   width: auto;
-  border: green solid 2px;
+  border: #88c057 solid 3px;
   border-radius: 50%;
   padding: 5px;
 }
