--- a/src/index.css
+++ b/src/index.css
@@ -3,13 +3,21 @@
   font-family: 'Roboto', sans-serif;
 }
 
+.spaceArticle {
+  margin-bottom: 10px;
+}
+
 .title {
   text-align: center;
   color: green;
-  font-size: large;
+  font-size: x-large;
   font-weight: 900;
   font-style: italic;
   text-decoration: underline;
+}
+
+.header {
+  margin: 30px 0px; 
 }
 
 .subtitle {
