--- a/src/index.scss
+++ b/src/index.scss
@@ -4,13 +4,14 @@ $thirdy-grey: #3a3c3c;
 
 * {
   font-family: 'Roboto', sans-serif;
+  background-color: #878d8d;
 }
 
 //Pour le Titre
 .title {
   text-align: center;
   color: $primary-green;
-  font-size: x-large;
+  font-size: xx-large;
   font-weight: 900;
   font-style: italic;
   text-decoration: underline;
@@ -52,6 +53,7 @@ button {
   border-radius: 10px;
   margin: 3px 3px;
   padding: 3px;
+  font-size: large;
 }
 
 button:hover {
@@ -62,7 +64,7 @@ button:hover {
 
 //pour les listes nav et articles
 ol {
-  padding-inline-start: 10px !important;
+  padding-inline-start: 0px;
 
   li {
     list-style-type: none;
@@ -71,7 +73,7 @@ ol {
   button {
     border: $thirdy-grey solid 2px;
     border-radius: 10px;
-    margin: 3px 3px;
+    margin: 3px 0px;
   }
 
   button:hover {
@@ -96,7 +98,7 @@ ol {
 }
 
 .subtitle {
-  font-size: large;
+  font-size: xx-large;
   color: $primary-green;
   font-weight: 500;
   font-style: italic;
@@ -112,14 +114,15 @@ ol {
 .article {
   margin: 0px 10px;
   li {
-    font-size: large;
+    font-size: x-large;
     font-weight: 100;
     margin: 10px 0px;
+    list-style:none;
   }
 }
 
 p {
-  font-size: larger;
+  font-size: x-large;
   margin: 5px 5px;
   font-weight: 400;
 }
