--- a/src/index.scss
+++ b/src/index.scss
@@ -113,11 +113,12 @@ ol {
 
 .article {
   margin: 0px 10px;
+
   li {
     font-size: x-large;
     font-weight: 100;
     margin: 10px 0px;
-    list-style:none;
+    list-style: none;
   }
 }
 
@@ -168,5 +169,36 @@ img {
 }
 
 .img-retour-haut-de-page:hover {
+  cursor: pointer;
+}
+
+/* Add your modal styles here */
+.image-modal {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.modal-content {
+  background: #fff;
+  padding: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
+  text-align: center;
+}
+
+.modal-content img {
+  max-width: 100%;
+  max-height: 80vh;
+}
+
+.modal-content button {
+  margin-top: 10px;
   cursor: pointer;
 }
