--- a/src/index.scss
+++ b/src/index.scss
@@ -164,6 +164,10 @@ img {
   padding: 20px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.5);
   text-align: center;
+  img {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .modal-content img {
@@ -188,6 +192,8 @@ img {
   background-color: $thirdy-grey;
 }
 
+
+//Pour l'icone back to top
 #backToTop {
   visibility: hidden;
   opacity: 0;
