--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,7 @@
 $primary-green: #88c057;
 $secondary-orange: #ffa200;
-$thirdy-grey: #3a3c3c;
+$thirdy-grey: #113d3d;
+$text-color: #d9ff00;
 
 html {
   scroll-behavior: smooth;
@@ -8,7 +9,7 @@ html {
 
 * {
   font-family: 'Roboto', sans-serif;
-  background-color: #878d8d;
+  background-color: #465252;
 }
 
 //Pour le Titre
@@ -53,11 +54,12 @@ html {
 
 //les bouttons de la nav
 button {
-  border: $secondary-orange solid 2px;
+  border: $secondary-orange solid 3px;
   border-radius: 10px;
   margin: 3px 3px;
-  padding: 3px;
+  padding: 5px;
   font-size: large;
+  color: white;
 }
 
 button:hover {
@@ -75,9 +77,10 @@ ol {
   }
 
   button {
-    border: $thirdy-grey solid 2px;
+    border: $thirdy-grey solid 4px;
     border-radius: 10px;
     margin: 3px 0px;
+    padding: 5px;
   }
 
   button:hover {
@@ -99,6 +102,15 @@ ol {
 //Pour les articles
 .spaceArticle {
   margin-bottom: 10px;
+}
+
+span {
+  color: $text-color;
+}
+
+p,
+li {
+  color: white;
 }
 
 .subtitle {
@@ -125,12 +137,12 @@ ol {
     margin: 10px 0px;
     list-style: none;
   }
-}
 
-p {
-  font-size: x-large;
-  margin: 5px 5px;
-  font-weight: 400;
+  p {
+    margin: 10px 0px;
+    font-size: x-large;
+    font-weight: 100;
+  }
 }
 
 hr {
